Fix scrollbar

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -10,6 +10,9 @@
 @import 'side_menu';
 @import 'listing';
 
+.container {
+	height: 100%;
+}
 #content {
 	.scrollable();
 	height: ~"calc(100% - @{header_height})";
