--- a/src/less/frame.less
+++ b/src/less/frame.less
@@ -11,3 +11,7 @@ button {
 	-webkit-user-select: none;
 	-webkit-app-region: drag;
 }
+
+.main-window-region, #main-window {
+	height: 100%;
+}
