--- a/src/less/listing.less
+++ b/src/less/listing.less
@@ -1,5 +1,6 @@
 .listings {
-	.scrollable();
+	.scrollable(#ffffff);
+	height: 100%;
 
 	.listing {
 		display: flex;
